--- a/index.html
+++ b/index.html
@@ -93,6 +93,24 @@
                 >
               </div>
             </li>
+            <li class="contact-item">
+              <div class="icon-box">
+                <ion-icon name="document-text-outline"></ion-icon>
+              </div>
+
+              <div class="contact-info">
+                <p class="contact-title">CV</p>
+
+                <a
+                  href="./assets/cv/ahmad-cancv-m23 (1).pdf"
+                  class="contact-link"
+                  target="_blank"
+                  rel="noopener"
+                >
+                  View CV
+                </a>
+              </div>
+            </li>
 
             <li class="contact-item">
               <div class="icon-box">
