--- a/index.html
+++ b/index.html
@@ -961,6 +961,48 @@
                 </a>
               </li>
 
+              <li
+                class="project-item active"
+                data-filter-item
+                data-category="Web Development"
+              >
+                <a href="project-details.html?id=plumberseoVisibility">
+                  <figure class="project-img">
+                    <div class="project-item-icon-box">
+                      <ion-icon name="eye-outline"></ion-icon>
+                    </div>
+                    <img
+                      src="./assets/images/project-plumberseo.jpg"
+                      alt="PlumberSEO Visibility Analyzer"
+                      loading="lazy"
+                    />
+                  </figure>
+                  <h3 class="project-title">PlumberSEO Visibility Analyzer</h3>
+                  <p class="project-category">Web Development</p>
+                </a>
+              </li>
+
+              <li
+                class="project-item active"
+                data-filter-item
+                data-category="Web Development"
+              >
+                <a href="project-details.html?id=facialRecognitionApp">
+                  <figure class="project-img">
+                    <div class="project-item-icon-box">
+                      <ion-icon name="eye-outline"></ion-icon>
+                    </div>
+                    <img
+                      src="./assets/images/AWS_Facial_Recognition_Case_Study/thumbnail.jpg"
+                      alt="AWS Facial Recognition Web App"
+                      loading="lazy"
+                    />
+                  </figure>
+                  <h3 class="project-title">AWS Facial Recognition Web App</h3>
+                  <p class="project-category">Web Development</p>
+                </a>
+              </li>
+
               <!-- 📸 COMPUTER VISION -->
               <li
                 class="project-item active"
