plumber_seo ppt added

--- a/index.html
+++ b/index.html
@@ -229,13 +229,10 @@
 
             <ul class="service-list">
               <li class="service-item">
-                <div class="service-icon-box">
-                  <img
-                    src="./assets/images/ai.png "
-                    alt="design icon"
-                    width="40"
-                  />
-                </div>
+                <div
+                  class="service-icon-box"
+                  data-service-icon="AI Engineering"
+                ></div>
 
                 <div class="service-content-box">
                   <h4 class="h4 service-item-title">AI Engineering</h4>
