--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <div class="info-content">
             <h1 class="name" title="Richard hanrick">Ahmad Shahzad</h1>
 
-            <p class="title">Automation Engineer</p>
+            <p class="title">AI Engineer</p>
           </div>
 
           <button class="info_more-btn" data-sidebar-btn>
@@ -198,25 +198,27 @@
 
           <section class="about-text">
             <p>
-              I’m a Machine Learning Engineer and Data Scientist specializing in
-              production-grade AI systems, including LLM pipelines, computer
-              vision, real-time analytics, and scalable cloud deployments.
+              I’m an AI Engineer and problem solver focused on building
+              production-grade systems that turn messy, real-world data into
+              reliable automation, insights, and decision support. I’ve
+              delivered AI solutions across sports, healthcare, finance,
+              security, and marketing, working on everything from language and
+              vision-driven systems to real-time analytics pipelines that
+              operate under practical constraints like latency, scale, privacy,
+              and accuracy.
             </p>
 
             <p>
-              I’ve delivered AI solutions across sports, healthcare, finance,
-              security, and marketing building robust systems that integrate
-              deep learning, NLP, speech models, and high-volume streaming data.
-              My expertise spans the full ML lifecycle: dataset design, model
-              development, evaluation, MLOps, and deployment via AWS/GCP.
+              I bring an end-to-end mindset: understanding the business problem,
+              shaping data, designing the intelligence layer, validating
+              performance, and shipping a solution that holds up in production.
             </p>
             <p>
-              I focus on building solutions that produce measurable business
-              impact, such as automated call classification, real-time
-              performance analytics, AI-driven reporting, and intelligent
-              search. I enjoy transforming complex challenges into scalable,
-              reliable, production-ready AI systems used in real-world
-              environments.
+              I focus on outcomes that create measurable impact reducing manual
+              workload, improving response times, increasing decision quality,
+              and unlocking visibility teams didn’t have before. I enjoy taking
+              complex, ambiguous challenges and turning them into scalable,
+              dependable AI systems that people can trust and use daily.
             </p>
           </section>
 
@@ -570,7 +572,7 @@
 
               <div class="skills-icons-grid">
                 <div class="skill-box">
-                  <img src="./assets/icons2/yolo.png" />
+                  <img src="./assets/images/yolo.png" />
                   <span>YOLOv8</span>
                 </div>
 
@@ -1063,7 +1065,7 @@
               <li
                 class="project-item active"
                 data-filter-item
-                data-category="Web Development"
+                data-category="AI Agents"
               >
                 <a href="project-details.html?id=basketballBot">
                   <figure class="project-img">
@@ -1079,14 +1081,14 @@
                   <h3 class="project-title">
                     Basketball Performance Analysis Chatbot
                   </h3>
-                  <p class="project-category">Web Development</p>
+                  <p class="project-category">AI Agents</p>
                 </a>
               </li>
 
               <li
                 class="project-item active"
                 data-filter-item
-                data-category="Web Development"
+                data-category="AI & Automations"
               >
                 <a href="project-details.html?id=plumberseoVisibility">
                   <figure class="project-img">
@@ -1100,7 +1102,7 @@
                     />
                   </figure>
                   <h3 class="project-title">PlumberSEO Visibility Analyzer</h3>
-                  <p class="project-category">Web Development</p>
+                  <p class="project-category">AI & Automations</p>
                 </a>
               </li>
 
@@ -1415,9 +1417,7 @@
           </section>
 
           <!-- ✉️ Contact Form -->
-          <section class="contact-form">
-            <h3 class="h3 form-title">Contact Form</h3>
-
+          
             <section class="contact-form">
               <h3 class="h3 form-title">Contact Form</h3>
 
