--- a/project-details.html
+++ b/project-details.html
@@ -35,7 +35,7 @@
 
           <div class="info-content">
             <h1 class="name">Ahmad Shahzad</h1>
-            <p class="title">Automation Engineer</p>
+            <p class="title">AI Engineer</p>
           </div>
 
           <a href="index.html#portfolio" class="form-btn"
